--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,21 @@
 {
-  "extends": [
-    "oclif",
-    "oclif-typescript"
-  ]
+  "extends": ["oclif"],
+  "parser": "@babel/eslint-parser",
+  "parserOptions": {
+    "requireConfigFile": false
+  },
+  "rules": {
+    "no-console": ["warn"],
+    "semi": ["error", "always"],
+    "semi-style": ["error", "last"],
+    "space-before-function-paren": ["error", {
+      "anonymous": "never",
+      "named": "never",
+      "asyncArrow": "never"
+    }],
+    "unicorn/prefer-module": "off"
+  },
+  "env": {
+    "mocha": true
+  }
 }
