Add Leia tests part 2

--- a/.github/workflows/pr-leia-tests.yml
+++ b/.github/workflows/pr-leia-tests.yml
@@ -30,6 +30,7 @@ jobs:
         run: yarn install --prefer-offline --frozen-lockfile
 
       - name: Build package
+        shell: bash
         run: |
           yarn build
           sudo mv ./dist/@lando/docker-desktop /usr/local/bin/docker-desktop
